refactor(cart/cart-item) - change relation between CartEntity & CartItemEntity to unidirectional, where the CartItemEntity holds the relation